<resources>
    <string name="app_name">Milk Manager</string>
    <string name="we_will_send_you_an_otp_on_this_given_mobile_number">We will send you an otp on this given mobile number</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="milk_man">Milk Manager</string>
    <string name="please_enter_the_otp_sent_to_you">Please enter the OTP sent to you</string>
    <string name="did_n_t_received_an_otp">Didn\'t received an OTP?</string>
    <string name="resend_otp_again">RESEND OTP</string>
    <string name="get_otp">Get OTP</string>
    <string name="title_activity_selector" translatable="false">selector</string>
    <string name="adminno" translatable="false">8320255090</string>
    <string name="logout">Logout</string>
    <string name="language">Language</string>
</resources>