<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    tools:context=".verifyotp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_cow"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="90dp"
            android:src="@drawable/cow"  />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/milk_man"
            android:textSize="30sp"
            android:textColor="@color/colortextfirst"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/image_sendotp"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/receiveotp"  />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/otp_verification"
            android:textSize="20sp"
            android:textColor="@color/colortextfirst"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:textColor="@color/colortextsecond"
            android:textSize="14sp"
            android:text="@string/please_enter_the_otp_sent_to_you" />

        <TextView
            android:id="@+id/textmobileshownumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:textColor="@color/colortextfirst"
            android:textSize="14sp"
            android:textStyle="bold" />
        
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/inputotp1"
                android:layout_width="40dp"
                android:layout_height="46dp"
                android:layout_marginRight="2dp"
                android:nextFocusForward="@id/inputotp2"
                android:background="@drawable/backgroundbox"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colortextfirst"
                android:textStyle="bold"
                android:textSize="24sp"
                tools:ignore="labelFor" />

            <EditText
                android:id="@+id/inputotp2"
                android:layout_width="40dp"
                android:layout_height="46dp"
                android:layout_marginRight="2dp"
                android:nextFocusForward="@id/inputotp3"
                android:background="@drawable/backgroundbox"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colortextfirst"
                android:textStyle="bold"
                android:textSize="24sp"
                tools:ignore="labelFor" />

            <EditText
                android:id="@+id/inputotp3"
                android:nextFocusForward="@id/inputotp4"
                android:layout_width="40dp"
                android:layout_height="46dp"
                android:layout_marginRight="2dp"
                android:background="@drawable/backgroundbox"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colortextfirst"
                android:textStyle="bold"
                android:textSize="24sp"
                tools:ignore="labelFor" />

            <EditText
                android:id="@+id/inputotp4"
                android:nextFocusForward="@id/inputotp5"
                android:layout_width="40dp"
                android:layout_marginRight="2dp"
                android:layout_height="46dp"
                android:background="@drawable/backgroundbox"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colortextfirst"
                android:textStyle="bold"
                android:textSize="24sp"
                tools:ignore="labelFor" />

            <EditText
                android:id="@+id/inputotp5"
                android:nextFocusForward="@id/inputotp6"
                android:layout_width="40dp"
                android:layout_height="46dp"
                android:layout_marginRight="2dp"
                android:background="@drawable/backgroundbox"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colortextfirst"
                android:textStyle="bold"
                android:textSize="24sp"
                tools:ignore="labelFor" />

            <EditText
                android:id="@+id/inputotp6"
                android:layout_width="40dp"
                android:layout_marginRight="2dp"
                android:layout_height="46dp"
                android:background="@drawable/backgroundbox"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colortextfirst"
                android:textStyle="bold"
                android:textSize="24sp"
                tools:ignore="labelFor" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/did_n_t_received_an_otp"
                android:textSize="14sp"
                android:textColor="@color/colortextsecond"/>

            <TextView
                android:id="@+id/textresendotp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/resend_otp_again"
                android:layout_marginLeft="8dp"
                android:textSize="15sp"
                android:textColor="@color/colortextfirst"
                android:textStyle="bold"/>






        </LinearLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonverifyopt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Verify OTP"
                android:layout_margin="30dp"
                android:background="@drawable/backbutton"
                android:textColor="@color/colortextfirst"
                android:textStyle="bold">

            </androidx.appcompat.widget.AppCompatButton>

            <ProgressBar
                android:id="@+id/progressbar_verify_otp"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:visibility="gone"/>


        </FrameLayout>




    </LinearLayout>
    



</ScrollView>